# log-process

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
apps/: main.cpp
cmake/: clang-format.cmake  cppcheck.cmake  version.cmake
test/unit/: lp.cpp
